data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4366.wast
;; 5. **Test Description**:    - Create a scenario where `br_if` determines whether operands at the stack are adequate before a `call_indirect` call. The test checks if `br_if` correctly evaluates the stack state, confirming proper or insufficient operands handling for `call_indirect`.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (func $br_if_test
      (local i32)
      (local.set 0 (i32.const 1))
      (br_if 0 (local.get 0))
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "type mismatch"
)